CppTools: Fix indentation of plain strings

Raw strings should not be indented, but old-style strings still should.

Amends commit ddf7f5f232d70c8598654fdad08af3064f95903f.

Fixes: QTCREATORBUG-25817
Change-Id: I7836388efb2d19b8b898c7463c7fa2d2077e80b2
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>